T-7436 dialog: Fixing unwanted scrollbars and dialog styling
Reviewed-on: http://review.dev.totaralms.com/163
Tested-by: Aaron Barnes <aaronb@catalyst.net.nz>

--- a/theme/sector_hospitality/jquery-ui-1.7.2.custom.css
+++ b/theme/sector_hospitality/jquery-ui-1.7.2.custom.css
@@ -439,14 +439,14 @@ div.totara-dialog {
 						width: 95%;
 				    }
 
-			div.totara-dialog ul.treeview,
+			div.totara-dialog div.treeview-wrapper,
 			div.totara-dialog div#column-checkboxes {
 			    margin-top: 5px;
 			    overflow: auto;
 			}
 			    div.totara-dialog ul.treeview li {
 					min-height:16px;
-					padding-bottom: 2px;
+					padding-top: 2px;
 					font-size: 12px;
 			    }
 				div.totara-dialog ul.treeview li span a {
@@ -508,7 +508,6 @@ div.totara-dialog {
 		    }
 		div.totara-dialog .selected p {
 		    font-weight: bold;
-		    margin-top: 38px;
 		    padding:0;
 		}
 
