--- a/theme/standard/jquery-ui-1.7.2.custom.css
+++ b/theme/standard/jquery-ui-1.7.2.custom.css
@@ -441,14 +441,14 @@ div.totara-dialog {
 						width: 95%;
 				    }
 
-			div.totara-dialog ul.treeview-wrapper,
+			div.totara-dialog div.treeview-wrapper,
 			div.totara-dialog div#column-checkboxes {
 			    margin-top: 5px;
 			    overflow: auto;
 			}
 			    div.totara-dialog ul.treeview li {
 					min-height:16px;
-					padding-bottom: 2px;
+					padding-top: 2px;
 					font-size: 12px;
 			    }
 				div.totara-dialog ul.treeview li span a {
@@ -521,7 +521,6 @@ div.totara-dialog {
 		    }
 		div.totara-dialog .selected p {
 		    font-weight: bold;
-		    margin-top: 38px;
 			margin-bottom:10px;
 		    padding:0;
 		}
